# operation-system-and-system-programming

./: .gitignore  README.md
lab1/: CMakeLists.txt  functions.c  main.c
lab2/parent/: CMakeLists.txt  main.c  parent.c  parent.h
laba1/: .gitignore  functions.c  functions.h
laba2/: CMakeLists.txt
